# strlcpy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.h.in  fulltest.sh  meson.build  strlcpy.sln
CMake/: EnableCatch.cmake
FixedSizeStringBuilder/: FixedSizeStringBuilder.cxx  FixedSizeStringBuilder.h  FixedSizeStringBuilder.vcxproj
include/: config.h.in  meson.build  strconcat.hpp
src/: CMakeLists.txt  strlcat.c  strlcpy.c
strlcpy/: meson.build  strconcat.c  strlcat.c  strlcpy.c  strlcpy.vcxproj
test/: CMakeLists.txt  common.h  strconcat.cpp  strlcat.cpp  strlcpy.cpp
test_FixedSizeStringBuilder/: common.h  main.cxx  precomp.cxx  test_FixedSizeStringBuilder.vcxproj
test_strlcpy/: CMakeLists.txt  common.h  main.c  main.cpp  meson.build  precomp.c  strconcat.cpp  strlcat.cpp  strlcpy.cpp  test_strlcpy.vcxproj
test_strlcpy/pch/: common_pch.hpp
